--- a/contact.html
+++ b/contact.html
@@ -1,47 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Contact</title>
-</head>
+  </head>
 
-<body>
-    <img src="./images/scobicjjjj.jpg" id="logo" width="200" alt="Scobic logo">
+  <body>
+    <img
+      src="./images/scobicjjjj.jpg"
+      id="logo"
+      width="200"
+      alt="Scobic logo"
+    />
     <h3>Scobic ltd</h3>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="numbers.html">Numbers</a></li>
-        <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="numbers.html">Numbers</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
-    <img src="./images/pexels-photo-2443865.jpeg" width=100% alt="">
-    <br>
+    <img
+      src="./images/WhatsApp Image 2019-08-04 at 20.35.36.jpeg"
+      width="100%"
+      alt=""
+    />
+    <br />
     <h1>Contact us</h1>
     <form action="">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name"/>
-        <br>
-        <br>
-        <label for="email">Email</label>
-        <input type="text" name="email" id="email" />
-        <br>
-        <p>Description</p>
-        <textarea name="description" id="" cols="30" rows="10" placeholder="description"></textarea>
+      <label for="name">Name</label>
+      <input type="text" name="name" id="name" />
+      <br />
+      <br />
+      <label for="email">Email</label>
+      <input type="text" name="email" id="email" />
+      <br />
+      <p>Description</p>
+      <textarea
+        name="description"
+        id=""
+        cols="30"
+        rows="10"
+        placeholder="description"
+      ></textarea>
     </form>
 
-
-
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <p>copyright&copy;2019</p>
     <h3><a href="#logo">Back to top</a></h3>
-</body>
-
+  </body>
 </html>
